Fix HamburgerNavigationSearchBar's auto-complete items with long names or descriptions causing overflow on the x-axis

--- a/src/Components/HamburgerNavigationSearchBar/HamburgerNavigationSearchBar.scss
+++ b/src/Components/HamburgerNavigationSearchBar/HamburgerNavigationSearchBar.scss
@@ -67,11 +67,23 @@
       font-size: 1rem;
 
       .title {
+        max-width: 100%;
+        padding-right: 0.5rem;
+
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         font-size: 2rem;
         font-weight: 400;
       }
 
       .description {
+        max-width: 100%;
+        padding-right: 1rem;
+
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         font-size: 1.5rem;
         font-weight: 100;
       }
